--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="/src/assets/img/title2.ico" type="image/x-icon" />
+    <link rel="icon" href="@/assets/img/title2.ico" type="image/x-icon" />
     <title>管理員後台</title>
   </head>
   <body>
