--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js"
     />
-    <link rel="icon" href="@/assets/img/title2.ico" type="image/x-icon" />
+    <link rel="icon" href="../public/title2.ico" type="image/x-icon" />
     <title>管理員後台</title>
   </head>
 
